<resources>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_login">Email</string>
    <string name="Password_login">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="Btnlogin">Login</string>
    <string name="name_reg">Full Name</string>
    <string name="email_reg">Email</string>
    <string name="Password_reg">Password</string>
    <string name="RePassword_reg">Re-Enter Password</string>
    <string name="Btnreg">Register</string>
    <string name="Signup">Signup</string>
    <string name="Login">Login</string>
    <string name="app_name1">Dahlia</string>
</resources>